delete dmn files